--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,32 +8,32 @@ services:
     build:
       dockerfile: Dockerfile_funda
 
-
-  parser2:
-    container_name: ik_zoek_scraper
-    build:
-      dockerfile: Dockerfile_ik_zoek
-
-
-  parser3:
-    container_name: vesteda_scraper
-    build:
-      dockerfile: Dockerfile_vesteda
-
-  parser4:
-    container_name: woningnetregioamsterdam_scraper
-    build:
-      dockerfile: Dockerfile_woningnetregioamsterdam
-
-  parser5:
-    container_name: yourexpatbroker_scraper
-    build:
-      dockerfile: Dockerfile_yourexpatbroker
-
-  parser6:
-    container_name: ikwilhuren_scrape
-    build:
-      dockerfile: Dockerfile_ikwilhuren
+#
+#  parser2:
+#    container_name: ik_zoek_scraper
+#    build:
+#      dockerfile: Dockerfile_ik_zoek
+#
+#
+#  parser3:
+#    container_name: vesteda_scraper
+#    build:
+#      dockerfile: Dockerfile_vesteda
+#
+#  parser4:
+#    container_name: woningnetregioamsterdam_scraper
+#    build:
+#      dockerfile: Dockerfile_woningnetregioamsterdam
+#
+#  parser5:
+#    container_name: yourexpatbroker_scraper
+#    build:
+#      dockerfile: Dockerfile_yourexpatbroker
+#
+#  parser6:
+#    container_name: ikwilhuren_scrape
+#    build:
+#      dockerfile: Dockerfile_ikwilhuren
 
 
   user_filtering:
